css/globals/templates/grid.less
.grid-oneup() {
  @media screen and (min-width: 40em) { min-width: 100%; }
  .title { .post-title-oneup(@color-empty); }
  .subtitle { .post-subtitle-oneup(@color-empty); }
  .post-content {
    //does not need to be uniform with adjacent posts when all by itself
    //thus no top:X%
    .transform(translate3d(-50%, -50%, 0px));
  }
}
.grid-twoup() {
  @media screen and (min-width: 40em) { min-width: 50%; max-width: 50%; }
  .post-content {
    @media screen and (min-width: 40em) { top: 32%; }
    @media screen and (min-width: 60em) { top: 36%; }
  }
}
.grid-threeup() {
  @media screen and (min-width: 40em) { min-width: 33.33%; max-width: 33.33%; }
  .post-content {
    @media screen and (min-width: 40em) { top: 24%; }
    @media screen and (min-width: 60em) { top: 34%; }
  }
}

.posts-grid {
  background: @color-empty;
  display: block;
  overflow: hidden; //prevents 1px spacing
  position: relative;

  .display(flex);
  .flex-wrap(wrap);

  > .post {
    .flex(1);
    cursor: pointer;
    display: block;
    position: relative;

    //account for chrome's non-standard scrollbar/viewport measurement
    height: 240px;
    min-width: 100%;
    @media screen and (min-width: 40em) { height: 320px; }
    @media screen and (min-width: 60em) { height: 400px; }

    body.home &,
    body.archive & {
      //Style for archive pages only
      //Note: this does not extend beyond 9 grid items
      &:nth-child(1), &:nth-child(6)  {
        .grid-oneup;
      }
      &:nth-child(n+2):nth-child(-n+5) {
        .grid-twoup;
      }
      &:nth-child(n+7):nth-child(-n+9) {
        .grid-threeup;
      }
    }//archive

    body.single & {
      /* one item */
      &:first-child:nth-last-child(1) {
        .grid-oneup;
      }

      /* two items */
      &:first-child:nth-last-child(2),
      &:first-child:nth-last-child(2) ~ div {
        .grid-twoup;
      }

      /* three items */
      &:first-child:nth-last-child(3),
      &:first-child:nth-last-child(3) ~ div {
        .grid-threeup;
      }
    }//single

    body.error404 & {
      .grid-twoup;
    }

  }
}

